Revert "Update index.html page name."
This reverts commit d79617893595c8c801bae32b479f8b15293524a1.

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <nav class="main-nav page-header__item">
             <ul id="main-nav__list" role="menubar" class="main-nav-list">
                 <li role="persentation">
-                    <a href="#page-header" role="menuitem" class="main-nav-list__item main-nav-list__item--active">Home</a>
+                    <a href="#page-header" role="menuitem" class="main-nav-list__item main-nav-list__item--active">Profile</a>
                 </li>
                 <li role="persentation">
                     <a href="#about-me" role="menuitem" class="main-nav-list__item">About Me</a>
