--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html>
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -20,7 +20,7 @@
                     <li><a href="#">Skills</a></li>
                     <li><a href="#projects">Projects</a></li>
                     <li><a href="#about" aria-label="Learn more about Marquez">About</a></li>
-                    <li><a id="contact-button" href="#contact"><button>Contact</button></a></li>
+                    <li><a id="contact-button" href="#contact">Contact</a></li>
                 </ul>
             </nav>
     </header>
